Add Util.i18n() call for PF combo boxes and radios (select items).